controller, service, repo updates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=weather-monitoring
 # OpenWeatherMap API configuration
 openweathermap.api.key=ceb401d86c5949c98300963aebfbbd6c
 openweathermap.api.url=http://api.openweathermap.org/data/2.5/weather
-data.refresh.interval=1800000 # 5 minutes (300,000 ms)
+data.refresh.interval=300000 # 5 minutes (300,000 ms)
 
 # H2 Database configuration
 spring.datasource.url=jdbc:h2:mem:weatherdb
@@ -15,3 +15,6 @@ spring.h2.console.enabled=true
 # JPA properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+alert.temperature.threshold=35.0
+alert.consecutive.exceeds=2
