extra attributes, forcast update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=weather-monitoring
 # OpenWeatherMap API configuration
 openweathermap.api.key=ceb401d86c5949c98300963aebfbbd6c
 openweathermap.api.url=http://api.openweathermap.org/data/2.5/weather
+openweathermap.forecast.url=https://api.openweathermap.org/data/2.5/forecast
 data.refresh.interval=300000
 
 # H2 Database configuration
